--- a/TimeSheet.web/Views/_ViewImports.cshtml
+++ b/TimeSheet.web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using TimeSheet.web
-@using TimeSheet.web.Models
+﻿@using TimeSheet.Web
+@using TimeSheet.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
