Вернул изменения по фортировке. Закомментил код сортировки (на всякий случай)

--- a/TimeSheet.Web/Views/Home/TimeSheets.cshtml
+++ b/TimeSheet.Web/Views/Home/TimeSheets.cshtml
@@ -31,7 +31,8 @@
                 @Html.DisplayNameFor(model => model.Comment)
             </th>
             <th>
-                @Html.ActionLink("Date last edit", "TimeSheets", new { sortOrder = ViewBag.DateSortParm })
+                @*@Html.ActionLink("Date last edit", "TimeSheets", new { sortOrder = ViewBag.DateSortParm })*@
+                @Html.DisplayNameFor(model => model.DateLastEdit)
             </th>
             <th></th>
         </tr>
