--- a/TimeSheet.Web/Views/Home/TimeSheets.cshtml
+++ b/TimeSheet.Web/Views/Home/TimeSheets.cshtml
@@ -9,6 +9,16 @@
 @*<p>
     <a asp-action="Create">Create New</a>
 </p>*@
+
+@using (Html.BeginForm("TimeSheets", "Home"))
+{
+    <p>
+        <input type="hidden" value="@ViewBag.BookId" name="BookId" />
+        Input start date : @Html.TextBox("searchDateOfWorksFrom")
+        Input final date : @Html.TextBox("searchDateOfWorksTo")
+        <input type="submit" value="Apply filter" />
+    </p>
+}
 <table class="table">
     <thead>
         <tr>
@@ -31,7 +41,6 @@
                 @Html.DisplayNameFor(model => model.Comment)
             </th>
             <th>
-                @*@Html.ActionLink("Date last edit", "TimeSheets", new { sortOrder = ViewBag.DateSortParm })*@
                 @Html.DisplayNameFor(model => model.DateLastEdit)
             </th>
             <th></th>
