--- a/TimeSheet.Web/Views/Home/TimeSheets.cshtml
+++ b/TimeSheet.Web/Views/Home/TimeSheets.cshtml
@@ -6,18 +6,19 @@
 
 <h1>TimeSheets</h1>
 
-@*<p>
-    <a asp-action="Create">Create New</a>
-</p>*@
-
 @using (Html.BeginForm("TimeSheets", "Home", method:FormMethod.Get))
 {
     <p>
         <div>
             <h5>Filter by Date Of Works</h5>
-            Input start date : @Html.TextBoxFor(model => model.Filters.DateOfWorksFrom, new { @type = "date" })
-            Input final date : @Html.TextBoxFor(model => model.Filters.DateOfWorksTo, new { @type = "date" })
-            <input type="submit" value="Apply filter"/>
+            <p>
+                Input start date :  @Html.TextBoxFor(model => model.Filters.DateOfWorksFrom, new { @type = "date" })
+                Input final date :  @Html.TextBoxFor(model => model.Filters.DateOfWorksTo, new { @type = "date" })
+            </p>
+            <p>
+                Scope time sheet : @Html.TextBoxFor(model => model.Filters.Scope)
+            </p>
+            <input type="submit" value="Apply filters"/>
         </div>
     </p>
 }
