--- a/TimeSheet.Web/Views/Home/TimeSheetTable.cshtml
+++ b/TimeSheet.Web/Views/Home/TimeSheetTable.cshtml
@@ -7,7 +7,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(model => model.NameEmployee)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Scope)
@@ -28,7 +28,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                    @Html.DisplayFor(modelItem => item.NameEmployee)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Scope)
