Залил доработку + правки

--- a/TimeSheet.Web/Views/Home/TimeSheets.cshtml
+++ b/TimeSheet.Web/Views/Home/TimeSheets.cshtml
@@ -34,7 +34,7 @@
    asp-route-page="@(Model.Page.PageNumber - 1)"
        class="btn btn-outline-dark">
         <i class="glyphicon glyphicon-chevron-left"></i>
-        Назад
+        Back
     </a>
 }
 
@@ -43,7 +43,7 @@
     <a asp-action="TimeSheets"
    asp-route-page="@(Model.Page.PageNumber + 1)"
        class="btn btn-outline-dark">
-        Вперед
+        Next
         <i class="glyphicon glyphicon-chevron-right"></i>
     </a>
 }
