Добавил рейт и валюты. Создал таблицы по новым двум сущностями. Создал экземпляры. Создал зависимости между таблицами

--- a/TimeSheet.Web/Views/Home/TimeSheetTable.cshtml
+++ b/TimeSheet.Web/Views/Home/TimeSheetTable.cshtml
@@ -2,33 +2,45 @@
 
 <table class="table">
     <thead>
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.NameEmployee)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Scope)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.WorkHours)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateOfWorks)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Comment)
-        </th>
-        <th></th>
-    </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Id)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.NameEmployee)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Scope)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ScopeRate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.WorkHours)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DateOfWorks)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Comment)
+            </th>
+            <th></th>
+        </tr>
     </thead>
     <tbody>
-    @foreach (var item in Model) {
+@foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.NameEmployee)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Scope)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ScopeRate)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.WorkHours)
@@ -40,7 +52,7 @@
                 @Html.DisplayFor(modelItem => item.Comment)
             </td>
         </tr>
-    }
+}
     </tbody>
 </table>
 
