--- a/TimeSheet.Web/Views/Home/TimeSheets.cshtml
+++ b/TimeSheet.Web/Views/Home/TimeSheets.cshtml
@@ -6,7 +6,7 @@
 
 <h1>TimeSheets</h1>
 
-@using (Html.BeginForm("TimeSheets", "Home", method:FormMethod.Get))
+@using (Html.BeginForm("TimeSheets", "Home", method:FormMethod.Get, new { id = "time-sheets-table"}))
 {
     <p>
         <div>
@@ -24,26 +24,19 @@
             <input type="submit" value="Apply filters"/>
         </div>
     </p>
-}
 
-<partial name="TimeSheetTable" model="Model.Entries" />
+    <partial name="TimeSheetTable" model="Model.Entries" />
 
-@if (Model.Page.HasPreviousPage)
-{
-    <a asp-action="TimeSheets"
-   asp-route-page="@(Model.Page.PageNumber - 1)"
-       class="btn btn-outline-dark">
-        <i class="glyphicon glyphicon-chevron-left"></i>
-        Back
-    </a>
-}
+    @Html.HiddenFor(model => model.Filters.PageNumber)
 
-@if (Model.Page.HasNextPage)
-{
-    <a asp-action="TimeSheets"
-   asp-route-page="@(Model.Page.PageNumber + 1)"
-       class="btn btn-outline-dark">
-        Next
-        <i class="glyphicon glyphicon-chevron-right"></i>
-    </a>
+    @if (Model.Filters.HasPreviousPage)
+    {
+        <button onclick="back()">Back</button>
+        
+    }
+
+    @if (Model.Filters.HasNextPage)
+    {
+        <button onclick="next()">Next</button>
+    }
 }
