Разбил контроллеры на home/timesheet/scope, дописал сортировку по общей стоимости, учел количество часов работ в скоупах

--- a/TimeSheet.Web/Views/Scope/Scopes.cshtml
+++ b/TimeSheet.Web/Views/Scope/Scopes.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Scopes</h1>
 
-@using (Html.BeginForm("Scopes", "Home", method: FormMethod.Get, new { id = "scopes-table" }))
+@using (Html.BeginForm("Scopes", "Scope", method: FormMethod.Get, new { id = "scopes-table" }))
 {
     <partial name="ScopeTable" model="Model.Entries" />
 
