--- a/TimeSheet.Web/Views/Scope/ScopeTable.cshtml
+++ b/TimeSheet.Web/Views/Scope/ScopeTable.cshtml
@@ -10,10 +10,10 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Rate)
+                @Html.DisplayNameFor(model => model.TotalPrice)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RateUSD)
+                @Html.DisplayNameFor(model => model.TotalPriceUSD)
             </th>
             <th></th>
         </tr>
@@ -28,10 +28,10 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Rate)
+                @Html.DisplayFor(modelItem => item.TotalPrice)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.RateUSD)
+                @Html.DisplayFor(modelItem => item.TotalPriceUSD)
             </td>
         </tr>
     }
