--- a/TimeSheet.Web/Views/TimeSheet/TimeSheets.cshtml
+++ b/TimeSheet.Web/Views/TimeSheet/TimeSheets.cshtml
@@ -6,7 +6,7 @@
 
 <h1>TimeSheets</h1>
 
-@using (Html.BeginForm("TimeSheets", "Home", method:FormMethod.Get, new { id = "time-sheets-table"}))
+@using (Html.BeginForm("TimeSheets", "TimeSheet", method: FormMethod.Get, new { id = "time-sheets-table" }))
 {
     <p>
         <div>
