--- a/TimeSheet.Web/Views/Scope/ScopeTable.cshtml
+++ b/TimeSheet.Web/Views/Scope/ScopeTable.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<Services.Dtos.ScopeEntryDto>
-    
+
 <table class="table">
     <thead>
         <tr>
@@ -13,13 +13,16 @@
                 @Html.DisplayNameFor(model => model.TotalPrice)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.NameCurrency)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.TotalPriceUSD)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-    @foreach (var item in Model) {
+@foreach (var item in Model) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Id)
@@ -31,9 +34,12 @@
                 @Html.DisplayFor(modelItem => item.TotalPrice)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.NameCurrency)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.TotalPriceUSD)
             </td>
         </tr>
-    }
+}
     </tbody>
 </table>
