--- a/TimeSheet.Web/Views/Scope/Scopes.cshtml
+++ b/TimeSheet.Web/Views/Scope/Scopes.cshtml
@@ -1,25 +1,45 @@
-﻿@model TimeSheet.Web.Models.ScopeTableModel
+﻿@model IEnumerable<Services.Dtos.ScopeEntryDto>
 
-@{
-    ViewData["Title"] = "Scopes";
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Id)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TotalPrice)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.NameCurrency)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TotalPriceUSD)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TotalPrice)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NameCurrency)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TotalPriceUSD)
+            </td>
+        </tr>
 }
-
-<h1>Scopes</h1>
-
-@using (Html.BeginForm("Scopes", "Scope", method: FormMethod.Get, new { id = "scopes-table" }))
-{
-    <partial name="ScopeTable" model="Model.Entries" />
-
-    @Html.HiddenFor(model => model.Filters.PageNumber)
-
-    @if (Model.Filters.HasPreviousPage)
-    {
-        <button onclick="backScopeList()">Back</button>
-
-    }
-
-    @if (Model.Filters.HasNextPage)
-    {
-        <button onclick="nextScopeList()">Next</button>
-    }
-}
+    </tbody>
+</table>
