Добавил представление ТОП сотрудников по расходам за последний год; Дополнил модель сотрудников; Внес правки по предыдущему ПРу (ренейм методов, замена классов Сотрудников); Мелкие правки

--- a/TimeSheet.Web/Views/TimeSheet/TimeSheets.cshtml
+++ b/TimeSheet.Web/Views/TimeSheet/TimeSheets.cshtml
@@ -24,7 +24,7 @@
                                                          Text = t.Name, 
                                                          Value = t.Id.ToString()
                         
-                                                     }),"Choose all employee")
+                                                     }),"All employee")
             <input type="submit" value="Apply filters"/>
         </div>
     </p>
