Добавил страницу добавления табеля
В добавок удалил лишний код из site,js
Внес мелкие правки

--- a/TimeSheet.Web/Views/TimeSheet/TimeSheetTable.cshtml
+++ b/TimeSheet.Web/Views/TimeSheet/TimeSheetTable.cshtml
@@ -10,7 +10,7 @@
                 @Html.DisplayNameFor(model => model.NameEmployee)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Scope)
+                @Html.DisplayNameFor(model => model.NameScope)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.WorkHours)
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.NameEmployee)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Scope)
+                @Html.DisplayFor(modelItem => item.NameScope)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.WorkHours)
