--- a/TimeSheet.Web/Views/Shared/_Layout.cshtml
+++ b/TimeSheet.Web/Views/Shared/_Layout.cshtml
@@ -26,13 +26,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="TimeSheet" asp-action="TimeSheets">Time sheets</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TimeSheet" asp-action="Create">Time sheet adding window</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Scope" asp-action="Scopes">All-time Spending</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Employees">Annual Spending</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="TimeSheet" asp-action="Create">Time sheet adding window</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Currency" asp-action="Currencies">Exchange rates</a>
                         </li>
                     </ul>
                 </div>
