Добавил класс для методов получения данных
Добавил метод получения рейтов для конвертации usd в btc; Добавил в представления scope и employee колонку с отображением конвертации валюты в btc

--- a/TimeSheet.Web/Views/Scope/Scopes.cshtml
+++ b/TimeSheet.Web/Views/Scope/Scopes.cshtml
@@ -18,6 +18,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.TotalPriceUSD)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TotalPriceInBTC)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -38,6 +41,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TotalPriceUSD)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TotalPriceInBTC)
             </td>
         </tr>
 }
