--- a/TimeSheet.Web/Views/Employee/Employees.cshtml
+++ b/TimeSheet.Web/Views/Employee/Employees.cshtml
@@ -12,6 +12,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.TotalPriceUSD)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TotalPriceInBTC)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -26,6 +29,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TotalPriceUSD)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TotalPriceInBTC)
             </td>
         </tr>
 }
