--- a/TimeSheet.Web/Views/TimeSheet/Create.cshtml
+++ b/TimeSheet.Web/Views/TimeSheet/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Services.Dtos.TimeSheetCreateDto
 
-<h4>TimeSheetAddingDto</h4>
+<h4>TimeSheetSaveingDto</h4>
 <hr />
 @using (Html.BeginForm("Create", "TimeSheet", method: FormMethod.Post))
 {
