--- a/TimeSheet.Web/Views/Employee/Employees.cshtml
+++ b/TimeSheet.Web/Views/Employee/Employees.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Services.Dtos.EmployeeEntryDto>
+﻿@model IEnumerable<Services.Dtos.EmployeeEntryBTCDto>
 
 <table class="table">
     <thead>
