--- a/TimeSheet.Web/Views/Scope/Scopes.cshtml
+++ b/TimeSheet.Web/Views/Scope/Scopes.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Services.Dtos.ScopeEntryDto>
+﻿@model IEnumerable<Services.Dtos.ScopeEntryBTCDto>
 
 <table class="table">
     <thead>
