Добавил кеширование данных с таймером хранения из конфига
1. Добавил кеширование
2. Добавил конфиг с параметром секунд хранения данных и выбора АПИ хоста
3. Добавил модели во view Сотрудников и Скоупов для отображения сущностей, текущей даты и даты последнего кеша
4. Добавил новый АПИ хост BlockchainInfoHttpClient
5. Зарегистрировал IBitcoinHttpClientService и кеш
6. Применил паттерн проектирования - Фабричный метод - в работе с разными АПИ хостами
7. В сущности RatesDto добавил параметр update_at
8. Создал сущность отображения данных кеша CacheDateTimeDto
9. Внес правку в словосочетании TimeSheetSavingDto

--- a/TimeSheet.Web/Views/Employee/Employees.cshtml
+++ b/TimeSheet.Web/Views/Employee/Employees.cshtml
@@ -1,25 +1,25 @@
-﻿@model IEnumerable<Services.Dtos.EmployeeEntryBTCDto>
+﻿@model EmployeeModel
 
 <table class="table">
     <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TotalPriceUSD)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TotalPriceInBTC)
-            </th>
-            <th></th>
-        </tr>
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Employees[0].Id)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Employees[0].Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Employees[0].TotalPriceUSD)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Employees[0].TotalPriceInBTC)
+        </th>
+        <th></th>
+    </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+    @foreach (var item in Model.Employees) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Id)
@@ -34,6 +34,8 @@
                 @Html.DisplayFor(modelItem => item.TotalPriceInBTC)
             </td>
         </tr>
-}
+    }
     </tbody>
 </table>
+
+@await Html.PartialAsync("~/Views/MemoryCache/MemoryCacheData.cshtml", Model.CacheDateTime)
