Убрал представление данных о кеше
И удалил переменную UpdateAt из сущности RatesDto

--- a/TimeSheet.Web/Views/Employee/Employees.cshtml
+++ b/TimeSheet.Web/Views/Employee/Employees.cshtml
@@ -1,25 +1,25 @@
-﻿@model EmployeeModel
+﻿@model IEnumerable<Services.Dtos.EmployeeEntryBTCDto>
 
 <table class="table">
     <thead>
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Employees[0].Id)
+            @Html.DisplayNameFor(model => model.Id)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Employees[0].Name)
+            @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Employees[0].TotalPriceUSD)
+            @Html.DisplayNameFor(model => model.TotalPriceUSD)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Employees[0].TotalPriceInBTC)
+            @Html.DisplayNameFor(model => model.TotalPriceInBTC)
         </th>
         <th></th>
     </tr>
     </thead>
     <tbody>
-    @foreach (var item in Model.Employees) {
+    @foreach (var item in Model) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Id)
@@ -37,5 +37,3 @@
     }
     </tbody>
 </table>
-
-@await Html.PartialAsync("~/Views/MemoryCache/MemoryCacheData.cshtml", Model.CacheDateTime)
