--- a/TimeSheet.Web/Views/Scope/Scopes.cshtml
+++ b/TimeSheet.Web/Views/Scope/Scopes.cshtml
@@ -1,31 +1,31 @@
-﻿@model ScopeModel
+﻿@model IEnumerable<Services.Dtos.ScopeEntryBTCDto>
 
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Scopes[0].Id)
+                @Html.DisplayNameFor(model => model.Id)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Scopes[0].Name)
+                @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Scopes[0].TotalPrice)
+                @Html.DisplayNameFor(model => model.TotalPrice)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Scopes[0].NameCurrency)
+                @Html.DisplayNameFor(model => model.NameCurrency)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Scopes[0].TotalPriceUSD)
+                @Html.DisplayNameFor(model => model.TotalPriceUSD)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Scopes[0].TotalPriceInBTC)
+                @Html.DisplayNameFor(model => model.TotalPriceInBTC)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Scopes) {
+@foreach (var item in Model) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Id)
@@ -49,5 +49,3 @@
 }
     </tbody>
 </table>
-
-@await Html.PartialAsync("~/Views/MemoryCache/MemoryCacheData.cshtml", Model.CacheDateTime)
