Изменение назначение класса EditEmployee. Теперь он изменяет пароль + рефакторинг
1. Класс AccountService теперь public вместо internal
2. Класс AccountService теперь взаимодействует с бд через класс UserManager<Employee>
3. Метод переименован EditEmployee -> ChangePassword
4. В классе AccountService смена пароля метода ChangePassword работает через использование методов GeneratePasswordResetTokenAsync и ResetPasswordAsync экземпляра класса UserManager<Employee>
5. Добавил логирование и try catch
6. Убрал из модели LoginEditDto параметр Name

--- a/TimeSheet.Web/Views/Shared/_Layout.cshtml
+++ b/TimeSheet.Web/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
                         @if (User.Identity?.IsAuthenticated == true)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="EditUser">Edit user</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="ChangePassword">Edit user</a>
                             </li>
                         }
                     </ul>
