Удалил модель LoginEditDto

--- a/TimeSheet.Web/Views/Account/ChangePassword.cshtml
+++ b/TimeSheet.Web/Views/Account/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Services.Dtos.LoginEditDto
+﻿@model Services.Dtos.LoginEntryDto
 
 <h4>Change password any user by UserName</h4>
 <hr />
@@ -12,9 +12,9 @@
                 <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="NewPassword" class="control-label"></label>
-                <input asp-for="NewPassword" class="form-control" />
-                <span asp-validation-for="NewPassword" class="text-danger"></span>
+                <label asp-for="Password" class="control-label"></label>
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Apply" class="btn btn-primary" />
