Смена пароля происходит по id пользователя
Также
1. Добавил модель LoginEditDto для изменения пароля
2. Добавил модель ChangePasswordModel для view
3. Теперь на странице изменения паролей можно выбрать сотрудника из существующего списка

--- a/TimeSheet.Web/Views/Account/ChangePassword.cshtml
+++ b/TimeSheet.Web/Views/Account/ChangePassword.cshtml
@@ -1,24 +1,26 @@
-﻿@model Services.Dtos.LoginEntryDto
+﻿@model TimeSheet.Web.Models.ChangePasswordModel
 
-<h4>Change password any user by UserName</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="ChangePassword">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="UserName" class="control-label"></label>
-                <input asp-for="UserName" class="form-control" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Apply" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+@{
+    ViewData["Title"] = "ChangePassword";
+}
+ 
+<h4>Change password any user</h4> <hr />
+
+@using (Html.BeginForm("ChangePassword", "Account", method: FormMethod.Get))
+{<p>
+     <div>
+         <p>
+             Input name employee : @Html.DropDownListFor(model => model.Login.EmployeeId, 
+                                                  Model.Employees.Select(t => new SelectListItem
+                                                  {
+                                                      Text = t.Name, 
+                                                      Value = t.Id.ToString()
+                                                  }))
+         </p>
+         <p>
+             Input new password : @Html.TextBoxFor(model => model.Login.Password, new { @type = "text" })
+         </p>
+         <input type="submit" value="Apply"/>
+     </div>
+ </p>
+}
