Переработка метода изменения пароля
1. Удалил модель ChangePasswordModel
2. Разбил метод ChangePassword на два метода (пост и гет)

--- a/TimeSheet.Web/Views/Account/ChangePassword.cshtml
+++ b/TimeSheet.Web/Views/Account/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model TimeSheet.Web.Models.ChangePasswordModel
+﻿@model Services.Dtos.LoginEditDto
 
 @{
     ViewData["Title"] = "ChangePassword";
@@ -6,21 +6,24 @@
  
 <h4>Change password any user</h4> <hr />
 
-@using (Html.BeginForm("ChangePassword", "Account", method: FormMethod.Get))
-{<p>
-     <div>
-         <p>
-             Input name employee : @Html.DropDownListFor(model => model.Login.EmployeeId, 
-                                                  Model.Employees.Select(t => new SelectListItem
-                                                  {
-                                                      Text = t.Name, 
-                                                      Value = t.Id.ToString()
-                                                  }))
-         </p>
-         <p>
-             Input new password : @Html.TextBoxFor(model => model.Login.Password, new { @type = "text" })
-         </p>
-         <input type="submit" value="Apply"/>
-     </div>
- </p>
+@using (Html.BeginForm("ChangePassword", "Account", method: FormMethod.Post))
+{
+    <div class="row">
+        <div class="col-md-4">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label class="control-label">Employee</label>
+                @Html.DropDownListFor(model => model.EmployeeId,
+                    (IEnumerable<SelectListItem>)ViewBag.Employees,"Choose employee")
+            </div>
+            <div class="form-group">
+                <label asp-for="Password" class="control-label"></label>
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Apply" class="btn btn-primary" />
+            </div>
+        </div>
+    </div>
 }
