--- a/TimeSheet.Web/Views/Shared/_Layout.cshtml
+++ b/TimeSheet.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using System.Security.Claims
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -25,21 +26,38 @@
 
                         @if (User.Identity.IsAuthenticated)
                         {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="TimeSheet" asp-action="Create">Time sheet adding window</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Scope" asp-action="Scopes">All-time Spending</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Employees">Annual Spending</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Currency" asp-action="Currencies">Exchange rates</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="ChangePassword">Edit user</a>
-                            </li>
+                            if (User.Claims.Where(c => c.Type == ClaimsIdentity.DefaultRoleClaimType).Any(c => c.Value == "Employee" | c.Value == "Manager" | c.Value == "Admin"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="TimeSheet" asp-action="Create">Time sheet adding window</a>
+                                </li>
+                            }
+
+                            if (User.Claims.Where(c => c.Type == ClaimsIdentity.DefaultRoleClaimType).Any(c => c.Value == "Manager" | c.Value == "Admin"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Scope" asp-action="Scopes">All-time Spending</a>
+                                </li>
+                            }
+
+                            if (User.Claims.Where(c => c.Type == ClaimsIdentity.DefaultRoleClaimType).Any(c => c.Value == "HR" | c.Value == "Manager" | c.Value == "Admin"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Employees">Annual Spending</a>
+                                </li>
+                            }
+
+                            if (User.Claims.Where(c => c.Type == ClaimsIdentity.DefaultRoleClaimType).Any(c => c.Value == "Admin"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Currency" asp-action="Currencies">Exchange rates</a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="ChangePassword">Edit user</a>
+                                </li>
+                            }
+
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Log out</a>
                             </li>
